--- a/src/app/products/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/products/pages/uncommon-page/uncommon-page.component.html
@@ -1,1 +1,6 @@
-<p>uncommon-page works!</p>
+<p-panel header="Uncommon Pipes" class="p-1">
+  <p>Included in common module.</p>
+</p-panel>
+
+<div class="grid">
+</div>
